Archive2/d4/df640e171d84d6/output
main.cpp: In function 'int main()':
main.cpp:13:18: error: 'x' was not declared in this scope
     std::cout << x << std::endl;
                  ^
